kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agendafacil-ingress
  namespace: agendafacil
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: *.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: *.agendafacil.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: backend-service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
    - host: backend.agendafacil.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
    - host: telegram-service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telegram-service
                port:
                  number: 5000
    - host: whatsapp-service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whatsapp-service
                port:
                  number: 4000
